FileResource add supports http(s)/ftp and some optimized.